T-9171 theme/standard/styles_layout.css: fix alignment of status heading
Reviewed-on: https://review.totaralms.com/786
Tested-by: Totara Hudson <totara-hudson@catalyst.net.nz>

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -5297,8 +5297,7 @@ form.hierarchy-export-form {
 	width:95px;
 }
 #dp-plan-content fieldset table .c1{
-	width:80px;
-	text-align: center;
+	width:55px;
 }
 #dp-plan-content fieldset table .program-launch-course-button{
 	padding-top:5px;
